<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">PADC-FP-GoldenMyanmarTour</string>
    <string name="action_settings">Settings</string>

    <!--Navigation View -->
    <string name="destinations">Destinations</string>
    <string name="packages">Packages</string>
    <string name="hotels">Hotels</string>
    <string name="festivals">Festivals</string>
    <string name="plan_your_own_route">Plan Your Own Route</string>
    <string name="user_bookmark">User Bookmarks</string>

    <!--Destination and package detail -->
    <string name="lbl_book_mark">User Bookmark</string>
    <string name="lbl_search">Price Search</string>
    <string name="lbl_tour_type_filter">Tour Types</string>
    <string name="lbl_book">Book This Package</string>

    <string-array name="spinner_list_item_array">Tour Types Filter
        <item>Tour Types Filter</item>
        <item>Cycling Adventure</item>
        <item>Culture</item>
        <item>Trekking</item>
        <item>Photograph</item>
        <item>Diving</item>
        <item>Golf</item>
        <item>River Cruises</item>
        <item>Eco Tourism</item>
        <item>Bird Watching</item>
        <item>Elephant Camps</item>
        <item>Train Expeditions</item>
        <item>Air Balloons</item>
    </string-array>


    <string-array name="country_array">

        <item>Denmark</item>
        <item>Faroe Islands</item>
        <item>Finland</item>
        <item>Iceland</item>
        <item>Norway</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Sweden</item>

    </string-array>


    <string-array name="spinner_city_item_array">City Filter
        <item>City Filter</item>
        <item>Mandalay</item>
        <item>Pyin Oo Lwin</item>
        <item>Yangon</item>
        <item>Bagan</item>
        <item>Pindaya</item>
        <item>Myeik</item>
        <item>Monywa</item>
        <item>Mawlamying</item>
        <item>Kyaing Tong</item>
        <item>Kalaw</item>
    </string-array>

    <string-array name="spinner_price_item_array">Price Filter
        <item>Price Filter</item>
        <item>80,015 MMK</item>
        <item>61,575 MMK</item>
        <item>65,490 MMK</item>
        <item>50,225 MMK</item>
        <item>50,521 MMK</item>
        <item>55,395 MMK</item>
    </string-array>

    <string-array name="interested_places">
        <item>Number of Interested Places</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="hotel_desc">"Offering a unique blend of gentle Myanmar hospitality combined with first class service and facilities, the Grand Plaza Parkroyal, Yangon stands resplendent amidst a magnificent landscape dotted with golden pagodas. It is located in Yangon's central business district, only minutes away from the legendary Shwedagon Pagoda and the famous Bogyoke Aung San Market.Our spacious and elegantly appointed 312 guest rooms and suites exude a sense of comfort and style. Moreover, the exclusive Orchid Club Floor offers an unprecedented level of privilege and a host of complimentary services to our valued guests."
                + "\n\n" + "Feast your senses at the hotel's fine restaurants where you will find our unmistakable hospitality and culinary excellence. Whether it is a gathering of family or friends, our restaurants can satisfy any palate for any occasion.From contract signing to seminars, to conferences, or even lavish banquets, Grand Plaza Parkroyal is Yangon's preferred meeting and conference venue. Our functions and meeting rooms offer unique flexibility backed by impeccable, efficient services and facilities to please every event organizer. Moreover, a professional banquet service team is readily available to see to your needs.After a long day of site-seeing or business meetings, pamper yourself with long relaxing massages and traditional spa therapies. For fitness buffs, there's the gym, tennis court, swimming pool and aerobic studio. Sooth tired muscles with some time out in the sauna or steam bath.Be it for pleasure or business, Grand Plaza Parkroyal, Yangon, is the ultimate place for you in Yangon."</string>

    <!--Plan Own Route Fragment -->
    <string name="lbl_calculate">Calculate Price</string>
    <string name="filter_type_package">Type</string>

    <string name="filter_prompt_price">Price</string>
    <string name="filter_prompt_city">City</string>

    <string name="action_send_email">Book the Tourpackage via Email</string>
    <string name="select_picture">Select Picture</string>

    <string name="content_authority">com.padc.goldenmyanmartour</string>

    <string name="home_screen_title">Golden Myanmar Tour</string>
    <string name="lbl_attraction_places">Attraction Places</string>
    <string name="format_contact_option_confirmation"><xliff:g id="picked_attraction">%1$s</xliff:g>Please Select Your Booking Option</string>
    <!--<string name="format_contact_option_confirmation">Please Select Your Booking Option</string>-->
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="confirm_ok">Ok</string>
    <string name="booking_phone">By Phone</string>
    <string name="booking_email">By Email</string>
    <string name="book_the_package">Booking a Tour Package</string>
    <string name="format_book_the_package_message">I would like to book <xliff:g id="picked_attraction">%1$s</xliff:g></string>
    <!--<string name="format_book_the_package_message">I would like to book</string>-->
</resources>
