<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/destinations"
            android:checked="true"
            android:title="@string/destinations" />
        <item
            android:id="@+id/packages"
            android:title="@string/packages" />
        <item
            android:id="@+id/hotels"
            android:title="@string/hotels" />
        <item
            android:id="@+id/festivals"
            android:title="@string/festivals" />
        <item
            android:id="@+id/customize_tours"
            android:title="@string/plan_your_own_route" />
        <item
            android:id="@+id/user_bookmark"
            android:title="@string/user_bookmark" />
    </group>
</menu>