<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.HomeActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="90"
        android:title="@string/lbl_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tour_type_filter"
        android:orderInCategory="90"
        android:title="@string/lbl_tour_type_filter"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>
